#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
è¿ç§»ç³»ç»Ÿæ•°æ®åº“åˆå§‹åŒ–è„šæœ¬
åˆ›å»ºå®Œæ•´çš„æ•°æ®åº“è¡¨ç»“æ„ï¼Œæ”¯æŒJProtobufåˆ°æ ‡å‡†Protobufçš„è¿ç§»è®°å½•
"""

import sqlite3
from pathlib import Path

class MigrationDatabaseInitializer:
    """è¿ç§»æ•°æ®åº“åˆå§‹åŒ–å™¨"""
    
    def __init__(self, db_path: str):
        self.db_path = db_path
        self.project_root = Path('/home/pix/dev/code/java/DnfGameServer')
    
    def _connect(self):
        """è¿æ¥æ•°æ®åº“"""
        return sqlite3.connect(self.db_path)
    
    def initialize_database(self):
        """åˆå§‹åŒ–æ•°æ®åº“è¡¨ç»“æ„"""
        print("ğŸ”§ åˆå§‹åŒ–è¿ç§»æ•°æ®åº“...")
        print()
        
        conn = self._connect()
        cursor = conn.cursor()
        
        # 1. JProtobufæ¶ˆæ¯è¡¨
        print("1. åˆ›å»º jprotobuf_messages è¡¨...")
        cursor.execute('''
            CREATE TABLE IF NOT EXISTS jprotobuf_messages (
                id INTEGER PRIMARY KEY AUTOINCREMENT,
                message_name TEXT NOT NULL UNIQUE,
                file_path TEXT NOT NULL,
                module_id INTEGER,
                cmd INTEGER,
                message_type TEXT NOT NULL,
                field_count INTEGER DEFAULT 0,
                has_dependencies BOOLEAN DEFAULT 0,
                created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
                updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
            )
        ''')
        
        # 2. æ ‡å‡†Protobufæ¶ˆæ¯è¡¨
        print("2. åˆ›å»º proto_messages è¡¨...")
        cursor.execute('''
            CREATE TABLE IF NOT EXISTS proto_messages (
                id INTEGER PRIMARY KEY AUTOINCREMENT,
                message_name TEXT NOT NULL UNIQUE,
                file_path TEXT NOT NULL,
                package_name TEXT,
                field_count INTEGER DEFAULT 0,
                is_nested BOOLEAN DEFAULT 0,
                parent_message TEXT,
                created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
                updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
            )
        ''')
        
        # 3. æ¶ˆæ¯æ˜ å°„è¡¨
        print("3. åˆ›å»º message_mappings è¡¨...")
        cursor.execute('''
            CREATE TABLE IF NOT EXISTS message_mappings (
                id INTEGER PRIMARY KEY AUTOINCREMENT,
                jprotobuf_message_id INTEGER NOT NULL,
                proto_message_id INTEGER,
                mapping_type TEXT NOT NULL,
                mapping_confidence REAL DEFAULT 0.0,
                is_verified BOOLEAN DEFAULT 0,
                verified_by TEXT,
                verified_at TIMESTAMP,
                notes TEXT,
                created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
                updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
                FOREIGN KEY (jprotobuf_message_id) REFERENCES jprotobuf_messages(id),
                FOREIGN KEY (proto_message_id) REFERENCES proto_messages(id),
                UNIQUE(jprotobuf_message_id, proto_message_id)
            )
        ''')
        
        # 4. è¿ç§»æ‰¹æ¬¡è¡¨
        print("4. åˆ›å»º migration_batches è¡¨...")
        cursor.execute('''
            CREATE TABLE IF NOT EXISTS migration_batches (
                id INTEGER PRIMARY KEY AUTOINCREMENT,
                batch_number INTEGER NOT NULL UNIQUE,
                batch_name TEXT,
                description TEXT,
                status TEXT DEFAULT 'pending',
                start_time TIMESTAMP,
                end_time TIMESTAMP,
                jprotobuf_count INTEGER DEFAULT 0,
                proto_count INTEGER DEFAULT 0,
                created_by TEXT,
                created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
                updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
            )
        ''')
        
        # 5. è¿ç§»è®°å½•è¡¨
        print("5. åˆ›å»º migration_records è¡¨...")
        cursor.execute('''
            CREATE TABLE IF NOT EXISTS migration_records (
                id INTEGER PRIMARY KEY AUTOINCREMENT,
                batch_id INTEGER NOT NULL,
                jprotobuf_message_id INTEGER NOT NULL,
                proto_message_id INTEGER,
                migration_status TEXT NOT NULL,
                migration_reason TEXT,
                migration_notes TEXT,
                created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
                updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
                FOREIGN KEY (batch_id) REFERENCES migration_batches(id),
                FOREIGN KEY (jprotobuf_message_id) REFERENCES jprotobuf_messages(id),
                FOREIGN KEY (proto_message_id) REFERENCES proto_messages(id)
            )
        ''')
        
        # 6. æ¶ˆæ¯å­—æ®µè¡¨
        print("6. åˆ›å»º message_fields è¡¨...")
        cursor.execute('''
            CREATE TABLE IF NOT EXISTS message_fields (
                id INTEGER PRIMARY KEY AUTOINCREMENT,
                message_type TEXT NOT NULL,
                message_id INTEGER NOT NULL,
                field_name TEXT NOT NULL,
                field_type TEXT NOT NULL,
                field_number INTEGER NOT NULL,
                is_repeated BOOLEAN DEFAULT 0,
                is_optional BOOLEAN DEFAULT 0,
                default_value TEXT,
                comment TEXT,
                created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
                FOREIGN KEY (message_id) REFERENCES proto_messages(id) ON DELETE CASCADE,
                UNIQUE(message_type, message_id, field_name)
            )
        ''')
        
        # 7. æ¶ˆæ¯ä¾èµ–è¡¨
        print("7. åˆ›å»º message_dependencies è¡¨...")
        cursor.execute('''
            CREATE TABLE IF NOT EXISTS message_dependencies (
                id INTEGER PRIMARY KEY AUTOINCREMENT,
                parent_message_id INTEGER NOT NULL,
                child_message_id INTEGER NOT NULL,
                dependency_type TEXT NOT NULL,
                dependency_description TEXT,
                created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
                FOREIGN KEY (parent_message_id) REFERENCES proto_messages(id) ON DELETE CASCADE,
                FOREIGN KEY (child_message_id) REFERENCES proto_messages(id) ON DELETE CASCADE,
                UNIQUE(parent_message_id, child_message_id)
            )
        ''')
        
        # 8. è¿ç§»å†å²è¡¨
        print("8. åˆ›å»º migration_history è¡¨...")
        cursor.execute('''
            CREATE TABLE IF NOT EXISTS migration_history (
                id INTEGER PRIMARY KEY AUTOINCREMENT,
                batch_id INTEGER NOT NULL,
                action_type TEXT NOT NULL,
                action_description TEXT,
                action_data TEXT,
                performed_by TEXT,
                created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
                FOREIGN KEY (batch_id) REFERENCES migration_batches(id)
            )
        ''')
        
        # 9. æ¶ˆæ¯ä½¿ç”¨åœºæ™¯è¡¨
        print("9. åˆ›å»º message_usage_scenarios è¡¨...")
        cursor.execute('''
            CREATE TABLE IF NOT EXISTS message_usage_scenarios (
                id INTEGER PRIMARY KEY AUTOINCREMENT,
                message_type TEXT NOT NULL,
                message_id INTEGER NOT NULL,
                scenario_name TEXT NOT NULL,
                scenario_description TEXT,
                used_by_messages TEXT,
                created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
                FOREIGN KEY (message_id) REFERENCES proto_messages(id) ON DELETE CASCADE
            )
        ''')
        
        # 10. ç´¢å¼•
        print("10. åˆ›å»ºç´¢å¼•...")
        cursor.execute('CREATE INDEX IF NOT EXISTS idx_jprotobuf_messages_module ON jprotobuf_messages(module_id)')
        cursor.execute('CREATE INDEX IF NOT EXISTS idx_jprotobuf_messages_type ON jprotobuf_messages(message_type)')
        cursor.execute('CREATE INDEX IF NOT EXISTS idx_proto_messages_file ON proto_messages(file_path)')
        cursor.execute('CREATE INDEX IF NOT EXISTS idx_message_mappings_jprotobuf ON message_mappings(jprotobuf_message_id)')
        cursor.execute('CREATE INDEX IF NOT EXISTS idx_message_mappings_proto ON message_mappings(proto_message_id)')
        cursor.execute('CREATE INDEX IF NOT EXISTS idx_migration_records_batch ON migration_records(batch_id)')
        cursor.execute('CREATE INDEX IF NOT EXISTS idx_migration_records_status ON migration_records(migration_status)')
        cursor.execute('CREATE INDEX IF NOT EXISTS idx_message_fields_message ON message_fields(message_type, message_id)')
        cursor.execute('CREATE INDEX IF NOT EXISTS idx_message_dependencies_parent ON message_dependencies(parent_message_id)')
        cursor.execute('CREATE INDEX IF NOT EXISTS idx_message_dependencies_child ON message_dependencies(child_message_id)')
        cursor.execute('CREATE INDEX IF NOT EXISTS idx_migration_history_batch ON migration_history(batch_id)')
        
        conn.commit()
        conn.close()
        
        print()
        print("âœ… æ•°æ®åº“åˆå§‹åŒ–å®Œæˆï¼")
        print()
        print("å·²åˆ›å»ºçš„è¡¨:")
        print("  1. jprotobuf_messages - JProtobufæ¶ˆæ¯")
        print("  2. proto_messages - æ ‡å‡†Protobufæ¶ˆæ¯")
        print("  3. message_mappings - æ¶ˆæ¯æ˜ å°„å…³ç³»")
        print("  4. migration_batches - è¿ç§»æ‰¹æ¬¡")
        print("  5. migration_records - è¿ç§»è®°å½•")
        print("  6. message_fields - æ¶ˆæ¯å­—æ®µ")
        print("  7. message_dependencies - æ¶ˆæ¯ä¾èµ–")
        print("  8. migration_history - è¿ç§»å†å²")
        print("  9. message_usage_scenarios - æ¶ˆæ¯ä½¿ç”¨åœºæ™¯")
        print()
    
    def drop_all_tables(self):
        """åˆ é™¤æ‰€æœ‰è¡¨ï¼ˆæ…ç”¨ï¼‰"""
        print("âš ï¸  è­¦å‘Šï¼šå³å°†åˆ é™¤æ‰€æœ‰è¡¨ï¼")
        
        confirm = input("ç¡®è®¤åˆ é™¤æ‰€æœ‰è¡¨ï¼Ÿ(yes/no): ")
        if confirm.lower() != 'yes':
            print("å·²å–æ¶ˆ")
            return
        
        conn = self._connect()
        cursor = conn.cursor()
        
        tables = [
            'message_usage_scenarios',
            'migration_history',
            'message_dependencies',
            'message_fields',
            'migration_records',
            'migration_batches',
            'message_mappings',
            'proto_messages',
            'jprotobuf_messages'
        ]
        
        for table in tables:
            cursor.execute(f'DROP TABLE IF EXISTS {table}')
            print(f"  å·²åˆ é™¤è¡¨: {table}")
        
        conn.commit()
        conn.close()
        
        print()
        print("âœ… æ‰€æœ‰è¡¨å·²åˆ é™¤")

def main():
    """ä¸»å‡½æ•°"""
    import argparse
    
    parser = argparse.ArgumentParser(description='è¿ç§»æ•°æ®åº“åˆå§‹åŒ–è„šæœ¬')
    parser.add_argument('--init', action='store_true', help='åˆå§‹åŒ–æ•°æ®åº“')
    parser.add_argument('--drop', action='store_true', help='åˆ é™¤æ‰€æœ‰è¡¨ï¼ˆæ…ç”¨ï¼‰')
    
    args = parser.parse_args()
    
    db_path = '/home/pix/dev/code/java/DnfGameServer/devdoc/protobuf/reports/data/migration_system.db'
    initializer = MigrationDatabaseInitializer(db_path)
    
    if args.init:
        initializer.initialize_database()
    elif args.drop:
        initializer.drop_all_tables()
    else:
        parser.print_help()

if __name__ == '__main__':
    main()
